@@ -489,8 +489,27 @@ SUBROUTINE ADV_S
         ! David moved HPRNU and added HVC
         VISCOF=(FACT*0.5_SP*(VISCOFF(IA)*NN_HVC(IA)+VISCOFF(IB)*NN_HVC(IB)) + FM1*0.5_SP*(NN_HVC(IA)+NN_HVC(IB)))
         
-        TXX=0.5_SP*(PSPXD(IA)+PSPXD(IB))*VISCOF
-        TYY=0.5_SP*(PSPYD(IA)+PSPYD(IB))*VISCOF
+!JQI NOV2021
+       ! Adding here by Adi Nugraha 4/28/2020
+       ! The following lines were  commented out by TK per WL 5/23/2015
+       !
+       !Calculate diffusive flux based on average of diffusive flux calculation 
+       !on both sides (IA and IB) of the TCE edge 
+       !Note the diffusive flux has the mean salinity
+# if defined  (WET_DRY)
+        !Allow no diffusive flux between a wet node and a dry node  (WLong)
+
+        IF(ISWETN(IA)==1.AND.ISWETN(IB)==1)THEN
+# endif	
+          TXX=0.5_SP*(PSPXD(IA)+PSPXD(IB))*VISCOF   
+          TYY=0.5_SP*(PSPYD(IA)+PSPYD(IB))*VISCOF
+# if defined (WET_DRY)		  
+        ELSE
+          TXX=0.0_SP
+          TYY=0.0_SP
+        ENDIF
+# endif
+!JQI NOV2021
 
         FXX=-DTIJ(I,K)*TXX*DLTYE(I)
         FYY= DTIJ(I,K)*TYY*DLTXE(I)
